fixed hero slider on mobile and removed room count for sutton

--- a/src/styles/components/hero-slider.less
+++ b/src/styles/components/hero-slider.less
@@ -204,16 +204,27 @@ hero-slider {
       }
 
       .pages {
-        bottom: 20px;
+        bottom: 0px;
       }
     }
 
     .slider-content{
-      .content-inner {
-        h1, h2 {
-          display: none;
-        }
+      .hero-slide {
+        .content-inner {
+          top: 50%;
+          h1, h2 {
+            padding-left: 10px;
+            font-size: 12px;
+            font-size: 12px;
+            line-height: 18px;
+            padding: 5px 10px;
+            width: 90%;
+            span{
+              padding: 0;
+            }
+          }
 
+        }
       }
     }
   }
